<resources>
    <string name="app_name">Game of Life</string>

    <string name="btn_start_game">Start Game</string>
    <string name="btn_open_settings">Settings</string>

    <string name="btn_next">Next</string>
    <string name="btn_play">Play</string>
    <string name="btn_pause">Pause</string>

    <string name="btn_save_table_data">Save</string>
    <string name="tv_table_width">Table width</string>
    <string name="tv_table_height">Table height</string>

    <string name="cb_show_grids">Show grids</string>
    <string name="btn_clear">clear</string>
    <string name="cb_show_description">Show description</string>
</resources>
